Kaggle Notebook | phase-1.ipynb | Version 3

--- a/phase-1-ipynb.ipynb
+++ b/phase-1-ipynb.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a315014f",
+   "id": "d971cd33",
    "metadata": {
     "papermill": {
-     "duration": 0.003465,
-     "end_time": "2025-06-12T10:30:08.136143",
+     "duration": 0.003613,
+     "end_time": "2025-06-12T10:40:45.663536",
      "exception": false,
-     "start_time": "2025-06-12T10:30:08.132678",
+     "start_time": "2025-06-12T10:40:45.659923",
      "status": "completed"
     },
     "tags": []
@@ -21,19 +21,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "be5652ee",
+   "id": "033070e4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T10:30:08.143653Z",
-     "iopub.status.busy": "2025-06-12T10:30:08.143287Z",
-     "iopub.status.idle": "2025-06-12T10:30:08.151130Z",
-     "shell.execute_reply": "2025-06-12T10:30:08.150155Z"
+     "iopub.execute_input": "2025-06-12T10:40:45.670794Z",
+     "iopub.status.busy": "2025-06-12T10:40:45.670503Z",
+     "iopub.status.idle": "2025-06-12T10:40:45.677662Z",
+     "shell.execute_reply": "2025-06-12T10:40:45.676874Z"
     },
     "papermill": {
-     "duration": 0.013313,
-     "end_time": "2025-06-12T10:30:08.152710",
+     "duration": 0.012245,
+     "end_time": "2025-06-12T10:40:45.679004",
      "exception": false,
-     "start_time": "2025-06-12T10:30:08.139397",
+     "start_time": "2025-06-12T10:40:45.666759",
      "status": "completed"
     },
     "tags": []
@@ -45,13 +45,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31b00041",
+   "id": "0f29dbf8",
    "metadata": {
     "papermill": {
-     "duration": 0.002688,
-     "end_time": "2025-06-12T10:30:08.158557",
+     "duration": 0.00259,
+     "end_time": "2025-06-12T10:40:45.684695",
      "exception": false,
-     "start_time": "2025-06-12T10:30:08.155869",
+     "start_time": "2025-06-12T10:40:45.682105",
      "status": "completed"
     },
     "tags": []
@@ -63,19 +63,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e92303be",
+   "id": "82345256",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T10:30:08.165746Z",
-     "iopub.status.busy": "2025-06-12T10:30:08.165409Z",
-     "iopub.status.idle": "2025-06-12T10:30:08.172815Z",
-     "shell.execute_reply": "2025-06-12T10:30:08.171850Z"
+     "iopub.execute_input": "2025-06-12T10:40:45.691538Z",
+     "iopub.status.busy": "2025-06-12T10:40:45.691179Z",
+     "iopub.status.idle": "2025-06-12T10:40:45.697972Z",
+     "shell.execute_reply": "2025-06-12T10:40:45.696979Z"
     },
     "papermill": {
-     "duration": 0.012779,
-     "end_time": "2025-06-12T10:30:08.174285",
+     "duration": 0.011837,
+     "end_time": "2025-06-12T10:40:45.699384",
      "exception": false,
-     "start_time": "2025-06-12T10:30:08.161506",
+     "start_time": "2025-06-12T10:40:45.687547",
      "status": "completed"
     },
     "tags": []
@@ -97,19 +97,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "87e9d9ce",
+   "id": "22914c5b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T10:30:08.181893Z",
-     "iopub.status.busy": "2025-06-12T10:30:08.181579Z",
-     "iopub.status.idle": "2025-06-12T10:30:08.187444Z",
-     "shell.execute_reply": "2025-06-12T10:30:08.186372Z"
+     "iopub.execute_input": "2025-06-12T10:40:45.707104Z",
+     "iopub.status.busy": "2025-06-12T10:40:45.706303Z",
+     "iopub.status.idle": "2025-06-12T10:40:45.711772Z",
+     "shell.execute_reply": "2025-06-12T10:40:45.710843Z"
     },
     "papermill": {
-     "duration": 0.011397,
-     "end_time": "2025-06-12T10:30:08.188939",
+     "duration": 0.010668,
+     "end_time": "2025-06-12T10:40:45.713216",
      "exception": false,
-     "start_time": "2025-06-12T10:30:08.177542",
+     "start_time": "2025-06-12T10:40:45.702548",
      "status": "completed"
     },
     "tags": []
@@ -131,13 +131,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97793e95",
+   "id": "c6c070d6",
    "metadata": {
     "papermill": {
-     "duration": 0.00302,
-     "end_time": "2025-06-12T10:30:08.195236",
+     "duration": 0.002836,
+     "end_time": "2025-06-12T10:40:45.719231",
      "exception": false,
-     "start_time": "2025-06-12T10:30:08.192216",
+     "start_time": "2025-06-12T10:40:45.716395",
      "status": "completed"
     },
     "tags": []
@@ -148,13 +148,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fac1293",
+   "id": "6d9ae665",
    "metadata": {
     "papermill": {
-     "duration": 0.002799,
-     "end_time": "2025-06-12T10:30:08.201219",
+     "duration": 0.002736,
+     "end_time": "2025-06-12T10:40:45.724926",
      "exception": false,
-     "start_time": "2025-06-12T10:30:08.198420",
+     "start_time": "2025-06-12T10:40:45.722190",
      "status": "completed"
     },
     "tags": []
@@ -166,19 +166,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9569fafd",
+   "id": "74a58cd6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T10:30:08.208762Z",
-     "iopub.status.busy": "2025-06-12T10:30:08.208464Z",
-     "iopub.status.idle": "2025-06-12T10:30:08.213621Z",
-     "shell.execute_reply": "2025-06-12T10:30:08.212415Z"
+     "iopub.execute_input": "2025-06-12T10:40:45.732146Z",
+     "iopub.status.busy": "2025-06-12T10:40:45.731835Z",
+     "iopub.status.idle": "2025-06-12T10:40:45.736591Z",
+     "shell.execute_reply": "2025-06-12T10:40:45.735623Z"
     },
     "papermill": {
-     "duration": 0.010906,
-     "end_time": "2025-06-12T10:30:08.215168",
+     "duration": 0.010044,
+     "end_time": "2025-06-12T10:40:45.737898",
      "exception": false,
-     "start_time": "2025-06-12T10:30:08.204262",
+     "start_time": "2025-06-12T10:40:45.727854",
      "status": "completed"
     },
     "tags": []
@@ -200,19 +200,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9a6460cb",
+   "id": "651743e1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T10:30:08.222972Z",
-     "iopub.status.busy": "2025-06-12T10:30:08.222668Z",
-     "iopub.status.idle": "2025-06-12T10:30:08.230529Z",
-     "shell.execute_reply": "2025-06-12T10:30:08.229553Z"
+     "iopub.execute_input": "2025-06-12T10:40:45.745165Z",
+     "iopub.status.busy": "2025-06-12T10:40:45.744872Z",
+     "iopub.status.idle": "2025-06-12T10:40:45.751440Z",
+     "shell.execute_reply": "2025-06-12T10:40:45.750559Z"
     },
     "papermill": {
-     "duration": 0.013601,
-     "end_time": "2025-06-12T10:30:08.232131",
+     "duration": 0.011658,
+     "end_time": "2025-06-12T10:40:45.752701",
      "exception": false,
-     "start_time": "2025-06-12T10:30:08.218530",
+     "start_time": "2025-06-12T10:40:45.741043",
      "status": "completed"
     },
     "tags": []
@@ -234,19 +234,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d5828dae",
+   "id": "ca4f9e7e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T10:30:08.241447Z",
-     "iopub.status.busy": "2025-06-12T10:30:08.240064Z",
-     "iopub.status.idle": "2025-06-12T10:30:08.334928Z",
-     "shell.execute_reply": "2025-06-12T10:30:08.333662Z"
+     "iopub.execute_input": "2025-06-12T10:40:45.760121Z",
+     "iopub.status.busy": "2025-06-12T10:40:45.759846Z",
+     "iopub.status.idle": "2025-06-12T10:40:45.851263Z",
+     "shell.execute_reply": "2025-06-12T10:40:45.850181Z"
     },
     "papermill": {
-     "duration": 0.101082,
-     "end_time": "2025-06-12T10:30:08.336662",
+     "duration": 0.096688,
+     "end_time": "2025-06-12T10:40:45.852695",
      "exception": false,
-     "start_time": "2025-06-12T10:30:08.235580",
+     "start_time": "2025-06-12T10:40:45.756007",
      "status": "completed"
     },
     "tags": []
@@ -259,9 +259,9 @@
       "Python list Multiplication [1, 2, 3, 1, 2, 3]\n",
       "Pyhton Array Multiplication [2 4 6]\n",
       "\n",
-      " List operation time: 0.07915830612182617\n",
+      " List operation time: 0.07666897773742676\n",
       "\n",
-      " Numpy operation time: 0.008092880249023438\n"
+      " Numpy operation time: 0.008646011352539062\n"
      ]
     }
    ],
@@ -287,13 +287,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26f23f75",
+   "id": "5edff614",
    "metadata": {
     "papermill": {
-     "duration": 0.00322,
-     "end_time": "2025-06-12T10:30:08.343379",
+     "duration": 0.002983,
+     "end_time": "2025-06-12T10:40:45.859056",
      "exception": false,
-     "start_time": "2025-06-12T10:30:08.340159",
+     "start_time": "2025-06-12T10:40:45.856073",
      "status": "completed"
     },
     "tags": []
@@ -305,19 +305,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6af81748",
+   "id": "8308f522",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T10:30:08.351730Z",
-     "iopub.status.busy": "2025-06-12T10:30:08.351417Z",
-     "iopub.status.idle": "2025-06-12T10:30:08.358810Z",
-     "shell.execute_reply": "2025-06-12T10:30:08.357803Z"
+     "iopub.execute_input": "2025-06-12T10:40:45.866981Z",
+     "iopub.status.busy": "2025-06-12T10:40:45.866362Z",
+     "iopub.status.idle": "2025-06-12T10:40:45.872995Z",
+     "shell.execute_reply": "2025-06-12T10:40:45.872025Z"
     },
     "papermill": {
-     "duration": 0.013481,
-     "end_time": "2025-06-12T10:30:08.360239",
+     "duration": 0.012102,
+     "end_time": "2025-06-12T10:40:45.874478",
      "exception": false,
-     "start_time": "2025-06-12T10:30:08.346758",
+     "start_time": "2025-06-12T10:40:45.862376",
      "status": "completed"
     },
     "tags": []
@@ -338,8 +338,8 @@
       " [[7 7]\n",
       " [7 7]]\n",
       "random array: \n",
-      " [[0.58610345 0.39914719 0.3652639 ]\n",
-      " [0.15328999 0.99143526 0.9700111 ]]\n"
+      " [[0.36120347 0.780813   0.72946272]\n",
+      " [0.23640043 0.9900794  0.04226   ]]\n"
      ]
     }
    ],
@@ -360,19 +360,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "26294e30",
+   "id": "306bb05d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T10:30:08.368562Z",
-     "iopub.status.busy": "2025-06-12T10:30:08.368207Z",
-     "iopub.status.idle": "2025-06-12T10:30:08.373914Z",
-     "shell.execute_reply": "2025-06-12T10:30:08.372927Z"
+     "iopub.execute_input": "2025-06-12T10:40:45.882318Z",
+     "iopub.status.busy": "2025-06-12T10:40:45.881991Z",
+     "iopub.status.idle": "2025-06-12T10:40:45.887213Z",
+     "shell.execute_reply": "2025-06-12T10:40:45.886575Z"
     },
     "papermill": {
-     "duration": 0.011712,
-     "end_time": "2025-06-12T10:30:08.375502",
+     "duration": 0.010567,
+     "end_time": "2025-06-12T10:40:45.888524",
      "exception": false,
-     "start_time": "2025-06-12T10:30:08.363790",
+     "start_time": "2025-06-12T10:40:45.877957",
      "status": "completed"
     },
     "tags": []
@@ -394,13 +394,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb76ad46",
+   "id": "f24c720b",
    "metadata": {
     "papermill": {
-     "duration": 0.003397,
-     "end_time": "2025-06-12T10:30:08.382979",
+     "duration": 0.003138,
+     "end_time": "2025-06-12T10:40:45.895209",
      "exception": false,
-     "start_time": "2025-06-12T10:30:08.379582",
+     "start_time": "2025-06-12T10:40:45.892071",
      "status": "completed"
     },
     "tags": []
@@ -412,19 +412,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "71436b73",
+   "id": "d0fc3f5d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T10:30:08.391499Z",
-     "iopub.status.busy": "2025-06-12T10:30:08.391132Z",
-     "iopub.status.idle": "2025-06-12T10:30:08.398955Z",
-     "shell.execute_reply": "2025-06-12T10:30:08.397793Z"
+     "iopub.execute_input": "2025-06-12T10:40:45.903586Z",
+     "iopub.status.busy": "2025-06-12T10:40:45.902691Z",
+     "iopub.status.idle": "2025-06-12T10:40:45.908979Z",
+     "shell.execute_reply": "2025-06-12T10:40:45.908201Z"
     },
     "papermill": {
-     "duration": 0.014039,
-     "end_time": "2025-06-12T10:30:08.400610",
+     "duration": 0.011801,
+     "end_time": "2025-06-12T10:40:45.910352",
      "exception": false,
-     "start_time": "2025-06-12T10:30:08.386571",
+     "start_time": "2025-06-12T10:40:45.898551",
      "status": "completed"
     },
     "tags": []
@@ -467,13 +467,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e8945ff",
+   "id": "7c813d3d",
    "metadata": {
     "papermill": {
-     "duration": 0.003406,
-     "end_time": "2025-06-12T10:30:08.407933",
+     "duration": 0.003306,
+     "end_time": "2025-06-12T10:40:45.917232",
      "exception": false,
-     "start_time": "2025-06-12T10:30:08.404527",
+     "start_time": "2025-06-12T10:40:45.913926",
      "status": "completed"
     },
     "tags": []
@@ -484,20 +484,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "64540cf2",
+   "execution_count": 10,
+   "id": "a9eb111b",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-06-12T10:40:45.925584Z",
+     "iopub.status.busy": "2025-06-12T10:40:45.924813Z",
+     "iopub.status.idle": "2025-06-12T10:40:45.930323Z",
+     "shell.execute_reply": "2025-06-12T10:40:45.929482Z"
+    },
     "papermill": {
-     "duration": 0.003918,
-     "end_time": "2025-06-12T10:30:08.415802",
+     "duration": 0.011004,
+     "end_time": "2025-06-12T10:40:45.931694",
      "exception": false,
-     "start_time": "2025-06-12T10:30:08.411884",
+     "start_time": "2025-06-12T10:40:45.920690",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape: \n",
+      " (2, 3)\n",
+      "Dimention: \n",
+      " 2\n",
+      "Size: \n",
+      " 6\n",
+      "DType \n",
+      " int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([[1, 2, 3],\n",
+    "               [4, 5, 6]])\n",
+    "print(\"Shape: \\n\", arr.shape)\n",
+    "print(\"Dimention: \\n\", arr.ndim)\n",
+    "print(\"Size: \\n\", arr.size)\n",
+    "print(\"DType \\n\", arr.dtype)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4603b7ad",
+   "metadata": {
+    "papermill": {
+     "duration": 0.003209,
+     "end_time": "2025-06-12T10:40:45.938664",
+     "exception": false,
+     "start_time": "2025-06-12T10:40:45.935455",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "### Array Reshaping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "56f2bf96",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-06-12T10:40:45.946535Z",
+     "iopub.status.busy": "2025-06-12T10:40:45.946213Z",
+     "iopub.status.idle": "2025-06-12T10:40:45.950930Z",
+     "shell.execute_reply": "2025-06-12T10:40:45.950280Z"
+    },
+    "papermill": {
+     "duration": 0.010019,
+     "end_time": "2025-06-12T10:40:45.952061",
+     "exception": false,
+     "start_time": "2025-06-12T10:40:45.942042",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Array  [[1 2 3]\n",
+      " [4 5 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array = np.arange(12)\n",
+    "print(\"Original Array \", arr)"
+   ]
   }
  ],
  "metadata": {
@@ -529,14 +609,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 5.869802,
-   "end_time": "2025-06-12T10:30:08.840773",
+   "duration": 5.495433,
+   "end_time": "2025-06-12T10:40:46.375384",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-06-12T10:30:02.970971",
+   "start_time": "2025-06-12T10:40:40.879951",
    "version": "2.6.0"
   }
  },
